# Renderer

./: .gitignore  CMakeLists.txt
imgui/: CMakeLists.txt
include/: camara.h  camera.h  debug_cube.hpp  edge.h  gui_element.hpp  intersection.h  little_axis.hpp  mesh.h  object.h  object_manager.hpp  renderer.h  shader.h  shader_path.h.in  utilities.h
include/glad/: glad.h
shaders/: axis.vert  color.frag  debug.frag  debug.vert  normals.frag  normals.geom  normals_geom.vert  test.v0.frag  test.v0.vert  texture.frag  vert_color.frag
src/: camera.cpp  edge.cpp  glad.c  intersection.cpp  little_axis.cpp  main.cpp  main2.cpp  mesh.cpp  object.cpp  object_manager.cpp  renderer.cpp  shader.cpp
